@@ -1,3 +1,8 @@
+2009-07-28  Cedric Vivier  <cedricv@neonux.com>
+
+	UseCorrectSuffixRule.cs: Lower the confidence when the base type itself does not use correct suffix
+	AND current type does not have its own defect (e.g by implementing an suffix-requiring interface).
+
 2009-07-05  Jesse Jones  <jesjones@mindspring.com>
 
 	* *Rule.cs: Edited most of the rule descriptions.
